# rusty-path-tracer

./: Cargo.toml  scene.json
src/: camera.rs  colour.rs  command_line_options.rs  hit.rs  intersectable.rs  main.rs  material.rs  ppm_image.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  viewport.rs
