[package]
name = "rusty-path-tracer"
version = "0.1.0"
authors = ["Per Bleshøy Nielsen <per.nielsen@productmadness.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = {version = "0.17.0", features =["serde"]}
matches = "0.1.8"
assert_approx_eq = "1.1.0"
rand = "0.7.3"
structopt = "0.3.20"
serde = {version = "1.0.117", features=["derive", "rc"]}
serde_json = "1.0.59"
typetag = "0.1.6"