[package]
name = "rusty-path-tracer"
version = "0.1.0"
authors = ["Per Bleshøy Nielsen <per.nielsen@productmadness.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
matches = "0.1.9"
assert_approx_eq = "1.1.0"
rand = "0.8.5"
structopt = "0.3.26"
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_json = "1.0.87"
typetag = "0.2.3"
# spmc = "0.3.0"
# rayon = "1.5.0"
# crossbeam = "0.8.0"
scoped_threadpool = "0.1.9"
sdl2 = "0.35.2"
